# video-pipeline-mvp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  llms.txt  mcp.json  pyproject.toml  requirements.txt
api/: app.py  config.py
api/routes/: images.py  projects.py  storyboard.py
core/: images.py  models.py  storyboard.py
core/prompts/: storyboard_prompt.txt
core/styles/: default.txt  knowledge.txt  tech.txt
mcp_server/: server.py
site/: app.html  index.html
